# overfitting-net

./: .gitignore  Makefile  gallery.md  imagenet_map_classes.json  mlflow.db  owo.py  pyproject.toml  test.ipynb
mlflow-artifacts/0/0354372360e3479e975757702e3dfff6/artifacts/: target_predictions.txt
model/: model.py
notebooks/: backpropagg.ipynb  entropy.ipynb  exp1.ipynb  exp2.ipynb  exp3.ipynb  exp4.ipynb  exp5.ipynb  experiment_plotter.ipynb  intrigued_kit_680.csv  melodic_doe_998.csv  mlflow.db  mlflowstats.ipynb  old.ipynb  playground.ipynb  run-all-datasets.ipynb  run-multiple-experiments.ipynb  run-subset-dataset.ipynb  run.ipynb  run_all_videos.ipynb  sharpen.ipynb  test.ipynb  trials.ipynb  vit.ipynb
notebooks/localhost:5000/1/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/overfit/: MLmodel
overfit/: env_settings.py
overfit/models/: overfit.py  primingnet.py  vit.py
overfit/optimizers/: sgdmod.py
overfit/trainers/: overfit.py
overfit/utils/: img2vid.py  io.py  misc.py  mlflow.py
pip-files/: requirements-dev.in  requirements-dev.txt
scripts/: all_genvideo.sh  all_imagenet_hf.sh  animate_dist.py  experiment.py  experiment_hf.py  generate_map.py  genvideo.py  make_video.py  owo.py  plot_lrvalley_prime.py  plot_msnail_prime.py  plot_sphere.py  plot_video.py  plot_wdvalley.py  plot_wdvalley_prime.py  relabel_images.py
scripts/data/: lr0.2_prime.csv  lr0.4_prime.csv  m0.1_prime.csv  m0.4_prime.csv  wd0.0_prime.csv  wd0.2_prime.csv  wd0.4_prime.csv  wdvalley.csv
scripts/figures/: relative_ordering.py
utils/: img2vid.py
(+636 files in other folders)
