[tool.poetry]
name = "overfitting-net"
version = "0.1.0"
description = ""
authors = ["Diego Canez <canezdiego@gmail.com>"]
packages = [
    { include = "overfit" }
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchvision = "^0.13.0"
numpy = "^1.23.0"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"
ipympl = "^0.9.1"
av = "^9.2.0"
pysftp = "^0.2.9"


[tool.poetry.group.dev.dependencies]
mlflow = "^1.27.0"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
